--- a/index.html
+++ b/index.html
@@ -1,198 +1,185 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <title>Realistic mortgage calculator</title>
-  <link href="css/reset.css" rel="stylesheet">
-  <link href="css/core.css" rel="stylesheet">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="lib/js.cookie.min.js"></script>
-  <script src="lib/jquery.sparkline.min.js"></script>
-  <script src="lib/housing.core.js"></script>
-  <script src="lib/housing.calculate.js"></script>
-  <script src="lib/housing.listeners.js"></script>
-  <script src="lib/housing.init.js"></script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-23679923-7', 'auto');
-    ga('send', 'pageview');
-  </script>
-</head>
-<body class="menu-closed">
-
-<div id="btn-open" class="btn-open"></div>
-
-<div id="menu" class="menu">
-  <row class="header">
-    <div class="title">Cost details</div>
-    <div id="btn-close" class="btn-close"></div>
-  </row>
-  <column>
-    <cell>
-      <c-name>Purchase date</c-name>
-      <c-input class="date">
-        <select id="e7" data-cookie="purchase_m"></select>
-        <select id="e8" data-cookie="purchase_y"></select>
-      </c-input>
-    </cell>
-    <cell>
-      <c-name>Home purchase price</c-name>
-      <c-input><input id="e1a" data-cookie="price"></c-input>
-    </cell>
-    <cell>
-      <c-name>Total at closing (<span id="e4b"></span>)</c-name>
-      <c-input><input id="e4a" data-cookie="down"></c-input>
-    </cell>
-    <cell>
-      <c-name>Closing costs (<span id="e3b"></span>)</c-name>
-      <c-input><input id="e3a" data-cookie="closing"></c-input>
-    </cell>
-    <cell>
-      <c-name>Down payment (<span id="e2b"></span>)</c-name>
-      <c-input><input id="e2a" data-cookie="down"></c-input>
-    </cell>
-    <cell>
-      <c-name>Loan term</c-name>
-      <c-input><input id="e9" data-cookie="loan"></c-input>
-    </cell>
-    <cell>
-      <c-name>Yearly interest rate (%)</c-name>
-      <c-input><input id="e10" data-cookie="interest"></c-input>
-    </cell>
-    <cell>
-      <c-name>Yearly PMI rate (%)</c-name>
-      <c-input><input id="e11" data-cookie="pmi"></c-input>
-    </cell>
-    <cell>
-      <c-name>Monthly HOA dues</c-name>
-      <c-input><input id="e12" data-cookie="hoa"></c-input>
-    </cell>
-    <cell>
-      <c-name>Extra monthly payment</c-name>
-      <c-input><input id="e13" data-cookie="extra"></c-input>
-    </cell>
-    <cell>
-      <c-name>Yearly homeowners insurance</c-name>
-      <c-input><input id="e5" data-cookie="hoi"></c-input>
-    </cell>
-    <cell>
-      <c-name>Yearly flood insurance</c-name>
-      <c-input><input id="e6" data-cookie="flood"></c-input>
-    </cell>
-    <!--<cell>
-      <c-name>Locality</c-name>
-      <c-input><input id="e19a" data-cookie="locality"></c-input>
-    </cell>-->
-    <cell>
-      <c-name>County millage rate</c-name>
-      <c-input><input id="e14" data-cookie="county"></c-input>
-    </cell>
-    <cell>
-      <c-name>City millage rate</c-name>
-      <c-input><input id="e15" data-cookie="city"></c-input>
-    </cell>
-    <cell>
-      <c-name>Assessment ratio (%)</c-name>
-      <c-input><input id="e18" data-cookie="assessment"></c-input>
-    </cell>
-    <cell>
-      <c-name>Yearly appreciation rate (%)</c-name>
-      <c-input><input id="e16" data-cookie="appreciation"></c-input>
-    </cell>
-    <cell>
-      <c-name>Monthly rent comparison</c-name>
-      <c-input><input id="e17" data-cookie="rent"></c-input>
-    </cell>
-    <cell>
-      <c-name>Loan amount</c-name>
-      <c-input><input id="u0" disabled></c-input>
-    </cell>
-    <cell>
-      <c-name>Monthly mortgage insurance</c-name>
-      <c-input><input id="u11m" disabled></c-input>
-    </cell>
-    <cell>
-      <c-name>Monthly principal &amp; interest</c-name>
-      <c-input><input id="u91" disabled></c-input>
-    </cell>
-    <cell>
-      <c-name>Monthly taxes, insurance, dues</c-name>
-      <c-input><input id="u92" disabled></c-input>
-    </cell>
-    <cell>
-      <c-name>Total monthly payments</c-name>
-      <c-input><input id="u94a" disabled></c-input>
-    </cell>
-    <cell>
-      <c-name>Monthly mortgage payment</c-name>
-      <c-input><input id="u93" disabled></c-input>
-    </cell>
-    <cell>
-      <c-name>Years to pay off</c-name>
-      <c-input><input id="u96a" disabled></c-input>
-    </cell>
-    <cell>
-      <c-name>Number of payments</c-name>
-      <c-input><input id="u95" disabled></c-input>
-    </cell>
-    <cell>
-      <c-name>Total mortgage payments</c-name>
-      <c-input><input id="u97" disabled></c-input>
-    </cell>
-    <cell>
-      <c-name>Total interest</c-name>
-      <c-input><input id="u98" disabled></c-input>
-    </cell>
-    <cell>
-      <c-name>Yearly rent</c-name>
-      <c-input><input id="u17" disabled></c-input>
-    </cell>
-  </column>
-</div>
-
-<div id="main" class="main">
-  <div id="tint" class="tint"></div>
-
-  <div class="insight">
-    With
-    <i-input>$<input id="e4z" data-cookie="down"></i-input>
-    paid at closing, a
-    <i-input>$<input id="e1z" data-cookie="price"></i-input>
-    home<!-- in
-    <i-input><input id="e19z" data-cookie="locality"></i-input>-->
-    costs about
-    <i-input class="disabled">$<input id="u94z" disabled></i-input>
-    per month for
-    <i-input class="disabled"><input id="u96z" disabled></i-input>
-    years
-    <div class="details">
-      <span id="btn-details" class="button noselect">Details</span>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="description" content="Purchasing a home is a big commitment, and we believe everyone deserves a complete picture of the real costs of buying a home. Realistic Mortgage provides insight into your expected net monthly cost based on local market variables.">
+    <meta name="keywords" content="mortgage,realistic,actual,cost,tax,pmi,Seattle,San Francisco,Chicago,Dallas,Austin,Atlanta,Los Angeles,New York,Washington,Denver,Charlotte,Fort Worth,Phoenix">
+    <title>Realistic mortgage calculator</title>
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/core.css" rel="stylesheet">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="lib/js.cookie.min.js"></script>
+    <script src="lib/jquery.sparkline.min.js"></script>
+    <script src="lib/housing.core.js"></script>
+    <script src="lib/housing.calculate.js"></script>
+    <script src="lib/housing.listeners.js"></script>
+    <script src="lib/housing.init.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-23679923-7', 'auto');
+      ga('send', 'pageview');
+    </script>
+  </head>
+  <body class="menu-closed">
+    <div id="btn-open" class="btn-open"></div>
+    <div id="menu" class="menu">
+      <row class="header">
+        <div class="title">Cost details</div>
+        <div id="btn-close" class="btn-close"></div>
+      </row>
+      <column>
+        <cell>
+          <c-name>Purchase date</c-name>
+          <c-input class="date">
+            <select id="e7" data-cookie="purchase_m"></select>
+            <select id="e8" data-cookie="purchase_y"></select>
+          </c-input>
+        </cell>
+        <cell>
+          <c-name>Home purchase price</c-name>
+          <c-input><input id="e1a" data-cookie="price"></c-input>
+        </cell>
+        <cell>
+          <c-name>Total at closing (<span id="e4b"></span>)</c-name>
+          <c-input><input id="e4a" data-cookie="down"></c-input>
+        </cell>
+        <cell>
+          <c-name>Closing costs (<span id="e3b"></span>)</c-name>
+          <c-input><input id="e3a" data-cookie="closing"></c-input>
+        </cell>
+        <cell>
+          <c-name>Down payment (<span id="e2b"></span>)</c-name>
+          <c-input><input id="e2a" data-cookie="down"></c-input>
+        </cell>
+        <cell>
+          <c-name>Loan term</c-name>
+          <c-input><input id="e9" data-cookie="loan"></c-input>
+        </cell>
+        <cell>
+          <c-name>Yearly interest rate (%)</c-name>
+          <c-input><input id="e10" data-cookie="interest"></c-input>
+        </cell>
+        <cell>
+          <c-name>Yearly PMI rate (%)</c-name>
+          <c-input><input id="e11" data-cookie="pmi"></c-input>
+        </cell>
+        <cell>
+          <c-name>Monthly HOA dues</c-name>
+          <c-input><input id="e12" data-cookie="hoa"></c-input>
+        </cell>
+        <cell>
+          <c-name>Extra monthly payment</c-name>
+          <c-input><input id="e13" data-cookie="extra"></c-input>
+        </cell>
+        <cell>
+          <c-name>Yearly homeowners insurance</c-name>
+          <c-input><input id="e5" data-cookie="hoi"></c-input>
+        </cell>
+        <cell>
+          <c-name>Yearly flood insurance</c-name>
+          <c-input><input id="e6" data-cookie="flood"></c-input>
+        </cell>
+        <cell>
+          <c-name>County millage rate</c-name>
+          <c-input><input id="e14" data-cookie="county"></c-input>
+        </cell>
+        <cell>
+          <c-name>City millage rate</c-name>
+          <c-input><input id="e15" data-cookie="city"></c-input>
+        </cell>
+        <cell>
+          <c-name>Assessment ratio (%)</c-name>
+          <c-input><input id="e18" data-cookie="assessment"></c-input>
+        </cell>
+        <cell>
+          <c-name>Yearly appreciation rate (%)</c-name>
+          <c-input><input id="e16" data-cookie="appreciation"></c-input>
+        </cell>
+        <cell>
+          <c-name>Monthly rent comparison</c-name>
+          <c-input><input id="e17" data-cookie="rent"></c-input>
+        </cell>
+        <cell>
+          <c-name>Loan amount</c-name>
+          <c-input><input id="u0" disabled></c-input>
+        </cell>
+        <cell>
+          <c-name>Monthly mortgage insurance</c-name>
+          <c-input><input id="u11m" disabled></c-input>
+        </cell>
+        <cell>
+          <c-name>Monthly principal &amp; interest</c-name>
+          <c-input><input id="u91" disabled></c-input>
+        </cell>
+        <cell>
+          <c-name>Monthly taxes, insurance, dues</c-name>
+          <c-input><input id="u92" disabled></c-input>
+        </cell>
+        <cell>
+          <c-name>Total monthly payments</c-name>
+          <c-input><input id="u94a" disabled></c-input>
+        </cell>
+        <cell>
+          <c-name>Monthly mortgage payment</c-name>
+          <c-input><input id="u93" disabled></c-input>
+        </cell>
+        <cell>
+          <c-name>Years to pay off</c-name>
+          <c-input><input id="u96a" disabled></c-input>
+        </cell>
+        <cell>
+          <c-name>Number of payments</c-name>
+          <c-input><input id="u95" disabled></c-input>
+        </cell>
+        <cell>
+          <c-name>Total mortgage payments</c-name>
+          <c-input><input id="u97" disabled></c-input>
+        </cell>
+        <cell>
+          <c-name>Total interest</c-name>
+          <c-input><input id="u98" disabled></c-input>
+        </cell>
+        <cell>
+          <c-name>Yearly rent</c-name>
+          <c-input><input id="u17" disabled></c-input>
+        </cell>
+      </column>
     </div>
-  </div>
-
-  <column class="visualization">
-    <div id="sparkline" class="sparkline"></div>
-    <row id="sparkline_dates" class="sparkline_dates"></row>
-  </column>
-
-  <column class="checkboxes">
-    <cell><input type="checkbox" id="cb-balance" checked> Loan balance</cell>
-    <cell><input type="checkbox" id="cb-payments_t" checked> Total payments</cell>
-  </column>
-
-  <div class="legal">
-    <a target="_blank" href="https://www.binaryaffection.com/projects/realisticmortgage/privacypolicy/">Privacy policy</a> &middot;
-    <a target="_blank" href="https://www.binaryaffection.com/projects/realisticmortgage/tou/">Terms of use</a>
-  </div>
-</div>
-
-</body>
+    <div id="main" class="main">
+      <div id="tint" class="tint"></div>
+      <div class="insight">
+        With
+        <i-input>$<input id="e4z" data-cookie="down"></i-input>
+        paid at closing, a
+        <i-input>$<input id="e1z" data-cookie="price"></i-input>
+        home costs about
+        <i-input class="disabled">$<input id="u94z" disabled></i-input>
+        per month for
+        <i-input class="disabled"><input id="u96z" disabled></i-input>
+        years
+        <div class="details">
+          <span id="btn-details" class="button noselect">Details</span>
+        </div>
+      </div>
+      <column class="visualization">
+        <div id="sparkline" class="sparkline"></div>
+        <row id="sparkline_dates" class="sparkline_dates"></row>
+      </column>
+      <column class="checkboxes">
+        <cell><input type="checkbox" id="cb-balance" checked> Loan balance</cell>
+        <cell><input type="checkbox" id="cb-payments_t" checked> Total payments</cell>
+      </column>
+      <div class="legal">
+        <a target="_blank" href="https://www.binaryaffection.com/projects/realisticmortgage/privacypolicy/">Privacy policy</a> &middot;
+        <a target="_blank" href="https://www.binaryaffection.com/projects/realisticmortgage/tou/">Terms of use</a>
+      </div>
+    </div>
+  </body>
 </html>
