- added page title

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Realistic mortgage calculator</title>
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/core.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Elsie:900" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="lib/js.cookie.min.js"></script>
     <script src="lib/jquery.sparkline.min.js"></script>
@@ -154,6 +155,7 @@
     </div>
     <div id="main" class="main">
       <div id="tint" class="tint"></div>
+      <h1>Realistic Mortgage</h1>
       <div class="insight">
         With
         <i-input>$<input id="e4z" data-cookie="down"></i-input>
