- added link to binary affection site

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
         <cell><input type="checkbox" id="cb-payments_t" checked> Total payments</cell>
       </column>
       <div class="legal">
+        <a target="_blank" href="https://www.binaryaffection.com/">&copy; 2017 Binary Affection</a> &middot;
         <a target="_blank" href="https://www.binaryaffection.com/projects/realisticmortgage/privacypolicy/">Privacy policy</a> &middot;
         <a target="_blank" href="https://www.binaryaffection.com/projects/realisticmortgage/tou/">Terms of use</a>
       </div>
