--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="description" content="Wondering how much house you can afford? Use this mortgage calculator to get quick estimates of monthly payments or adjust the details for more accurate results.">
-    <meta name="keywords" content="monthly house payment, mortgage calculator, home loan calculator, monthly house payment calculator, how much house can I afford, how much house can i afford calculator, Seattle mortgage calculator, San Francisco mortgage calculator, Chicago mortgage calculator, Atlanta mortgage calculator, Provo mortgage calculator, Dallas mortgage calculator, Georgia mortgage calculator">
-    <title>Realistic Mortgage Calculator</title>
+    <meta name="keywords" content="monthly house payment, mortgage calculator, home loan calculator, monthly house payment calculator, how much house can I afford, how much house can i afford calculator, Seattle mortgage calculator, San Francisco mortgage calculator, Chicago mortgage calculator, Atlanta mortgage calculator, Provo mortgage calculator, Dallas mortgage calculator, Georgia mortgage calculator, simple monthly payments calculator">
+    <title>Realistic Mortgage | Simple Monthly Payments Calculator</title>
+    <link rel="canonical" href="http://realisticmortgage.com">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
     <link href="css/reset.css" rel="stylesheet">
