- remove period from meta description to stay at 160 chars

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="description" content="Wondering how much house you can afford? Use this mortgage calculator to get quick estimates of monthly payments or adjust the details for more accurate results.">
+    <meta name="description" content="Wondering how much house you can afford? Use this mortgage calculator to get quick estimates of monthly payments or adjust the details for more accurate results">
     <meta name="keywords" content="monthly house payment, mortgage calculator, home loan calculator, monthly house payment calculator, how much house can I afford, how much house can i afford calculator, Seattle mortgage calculator, San Francisco mortgage calculator, Chicago mortgage calculator, Atlanta mortgage calculator, Provo mortgage calculator, Dallas mortgage calculator, Georgia mortgage calculator, simple monthly payments calculator">
     <title>Realistic Mortgage | Simple Monthly Payments Calculator</title>
     <link rel="canonical" href="http://realisticmortgage.com">
