--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Elsie:900" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="lib/js.cookie.min.js"></script>
-    <script src="lib/jquery.sparkline.min.js"></script>
-    <script src="lib/housing.core.js"></script>
-    <script src="lib/housing.calculate.js"></script>
-    <script src="lib/housing.listeners.js"></script>
-    <script src="lib/housing.init.js"></script>
+    <script src="lib/housing.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -33,159 +29,160 @@
   </head>
   <body class="menu-closed">
     <div id="btn-open" class="btn-open"></div>
-    <div id="menu" class="menu">
-      <row class="header">
+    <section id="menu" class="menu">
+      <header>
         <div class="title">Cost details</div>
         <div id="btn-close" class="btn-close"></div>
-      </row>
-      <column>
-        <cell>
-          <c-name>Purchase date</c-name>
-          <c-input class="date">
-            <select id="e7" data-cookie="purchase_m"></select>
-            <select id="e8" data-cookie="purchase_y"></select>
-          </c-input>
-        </cell>
-        <cell>
-          <c-name>Home purchase price</c-name>
-          <c-input><input id="e1a" data-cookie="price"></c-input>
-        </cell>
-        <cell>
-          <c-name>Total at closing (<span id="e4b"></span>)</c-name>
-          <c-input><input id="e4a" data-cookie="down"></c-input>
-        </cell>
-        <cell>
-          <c-name>Closing costs (<span id="e3b"></span>)</c-name>
-          <c-input><input id="e3a" data-cookie="closing"></c-input>
-        </cell>
-        <cell>
-          <c-name>Down payment (<span id="e2b"></span>)</c-name>
-          <c-input><input id="e2a" data-cookie="down"></c-input>
-        </cell>
-        <cell>
-          <c-name>Loan term</c-name>
-          <c-input><input id="e9" data-cookie="loan"></c-input>
-        </cell>
-        <cell>
-          <c-name>Yearly interest rate (%)</c-name>
-          <c-input><input id="e10" data-cookie="interest"></c-input>
-        </cell>
-        <cell>
-          <c-name>Yearly PMI rate (%)</c-name>
-          <c-input><input id="e11" data-cookie="pmi"></c-input>
-        </cell>
-        <cell>
-          <c-name>Monthly HOA dues</c-name>
-          <c-input><input id="e12" data-cookie="hoa"></c-input>
-        </cell>
-        <cell>
-          <c-name>Extra monthly payment</c-name>
-          <c-input><input id="e13" data-cookie="extra"></c-input>
-        </cell>
-        <cell>
-          <c-name>Yearly homeowners insurance</c-name>
-          <c-input><input id="e5" data-cookie="hoi"></c-input>
-        </cell>
-        <cell>
-          <c-name>Yearly flood insurance</c-name>
-          <c-input><input id="e6" data-cookie="flood"></c-input>
-        </cell>
-        <cell>
-          <c-name>County millage rate</c-name>
-          <c-input><input id="e14" data-cookie="county"></c-input>
-        </cell>
-        <cell>
-          <c-name>City millage rate</c-name>
-          <c-input><input id="e15" data-cookie="city"></c-input>
-        </cell>
-        <cell>
-          <c-name>Assessment ratio (%)</c-name>
-          <c-input><input id="e18" data-cookie="assessment"></c-input>
-        </cell>
-        <cell>
-          <c-name>Yearly appreciation rate (%)</c-name>
-          <c-input><input id="e16" data-cookie="appreciation"></c-input>
-        </cell>
-        <cell>
-          <c-name>Monthly rent comparison</c-name>
-          <c-input><input id="e17" data-cookie="rent"></c-input>
-        </cell>
-        <cell>
-          <c-name>Loan amount</c-name>
-          <c-input><input id="u0" disabled></c-input>
-        </cell>
-        <cell>
-          <c-name>Monthly mortgage insurance</c-name>
-          <c-input><input id="u11m" disabled></c-input>
-        </cell>
-        <cell>
-          <c-name>Monthly principal &amp; interest</c-name>
-          <c-input><input id="u91" disabled></c-input>
-        </cell>
-        <cell>
-          <c-name>Monthly taxes, insurance, dues</c-name>
-          <c-input><input id="u92" disabled></c-input>
-        </cell>
-        <cell>
-          <c-name>Total monthly payments</c-name>
-          <c-input><input id="u94a" disabled></c-input>
-        </cell>
-        <cell>
-          <c-name>Monthly mortgage payment</c-name>
-          <c-input><input id="u93" disabled></c-input>
-        </cell>
-        <cell>
-          <c-name>Years to pay off</c-name>
-          <c-input><input id="u96a" disabled></c-input>
-        </cell>
-        <cell>
-          <c-name>Number of payments</c-name>
-          <c-input><input id="u95" disabled></c-input>
-        </cell>
-        <cell>
-          <c-name>Total mortgage payments</c-name>
-          <c-input><input id="u97" disabled></c-input>
-        </cell>
-        <cell>
-          <c-name>Total interest</c-name>
-          <c-input><input id="u98" disabled></c-input>
-        </cell>
-        <cell>
-          <c-name>Yearly rent</c-name>
-          <c-input><input id="u17" disabled></c-input>
-        </cell>
-      </column>
-    </div>
-    <div id="main" class="main">
+      </header>
+      <ul>
+        <li>
+          <div class="label">Purchase date</div>
+          <div class="input date">
+            <select id="month" data-cookie="month"></select>
+            <select id="year" data-cookie="year"></select>
+          </div>
+        </li>
+        <li>
+          <div class="label">Home purchase price</div>
+          <div class="input"><input id="price" data-cookie="price"></div>
+        </li>
+        <li>
+          <div class="label">Total upfront costs (<span id="upfront_opposite"></span>)</div>
+          <div class="input"><input id="upfront" data-cookie="upfront"></div>
+        </li>
+        <li>
+          <div class="label sub">Closing costs (<span id="closing_opposite"></span>)</div>
+          <div class="input"><input id="closing" data-cookie="closing"></div>
+        </li>
+        <li>
+          <div class="label sub">Down payment (<span id="down_opposite"></span>)</div>
+          <div class="input"><input id="down" data-cookie="down"></div>
+        </li>
+        <li>
+          <div class="label">Loan term</div>
+          <div class="input"><input id="term" data-cookie="term"></div>
+        </li>
+        <li>
+          <div class="label">Yearly interest rate</div>
+          <div class="input"><input id="interest" data-cookie="interest"></div>
+        </li>
+        <li>
+          <div class="label">Yearly PMI rate</div>
+          <div class="input"><input id="pmi" data-cookie="pmi"></div>
+        </li>
+        <li>
+          <div class="label">Monthly HOA dues</div>
+          <div class="input"><input id="hoa" data-cookie="hoa"></div>
+        </li>
+        <li>
+          <div class="label">Extra monthly payment</div>
+          <div class="input"><input id="extra" data-cookie="extra"></div>
+        </li>
+        <li>
+          <div class="label">Yearly homeowners insurance</div>
+          <div class="input"><input id="hoi" data-cookie="hoi"></div>
+        </li>
+        <li>
+          <div class="label">Yearly flood insurance</div>
+          <div class="input"><input id="flood" data-cookie="flood"></div>
+        </li>
+        <li>
+          <div class="label">Effective tax rate</div>
+          <div class="input"><input id="tax" data-cookie="tax"></div>
+        </li>
+        <li>
+          <div class="label">Yearly appreciation rate</div>
+          <div class="input"><input id="appreciation" data-cookie="appreciation"></div>
+        </li>
+        <li>
+          <div class="label">Monthly rent comparison</div>
+          <div class="input"><input id="rent" data-cookie="rent"></div>
+        </li>
+        <li>
+          <div class="label">Loan amount</div>
+          <div class="input disabled"><input id="u0" disabled></div>
+        </li>
+        <li>
+          <div class="label">Monthly mortgage insurance</div>
+          <div class="input disabled"><input id="u11m" disabled></div>
+        </li>
+        <li>
+          <div class="label">Monthly principal &amp; interest</div>
+          <div class="input disabled"><input id="u91" disabled></div>
+        </li>
+        <li>
+          <div class="label">Monthly taxes, insurance, dues</div>
+          <div class="input disabled"><input id="u92" disabled></div>
+        </li>
+        <li>
+          <div class="label">Total monthly payments</div>
+          <div class="input disabled"><input id="u94a" disabled></div>
+        </li>
+        <li>
+          <div class="label">Monthly mortgage payment</div>
+          <div class="input disabled"><input id="u93" disabled></div>
+        </li>
+        <li>
+          <div class="label">Years to pay off</div>
+          <div class="input disabled"><input id="u96a" disabled></div>
+        </li>
+        <li>
+          <div class="label">Number of payments</div>
+          <div class="input disabled"><input id="u95" disabled></div>
+        </li>
+        <li>
+          <div class="label">Total mortgage payments</div>
+          <div class="input disabled"><input id="u97" disabled></div>
+        </li>
+        <li>
+          <div class="label">Total interest</div>
+          <div class="input disabled"><input id="u98" disabled></div>
+        </li>
+        <li>
+          <div class="label">Yearly rent</div>
+          <div class="input disabled"><input id="u17" disabled></div>
+        </li>
+      </ul>
+    </section>
+    <main id="main" class="main">
       <div id="tint" class="tint"></div>
       <h1>Realistic Mortgage Calculator</h1>
-      <div class="insight">
-        With
-        <i-input>$<input id="e4z" data-cookie="down"></i-input>
-        paid at closing, a
-        <i-input>$<input id="e1z" data-cookie="price"></i-input>
-        home costs about
-        <i-input class="disabled">$<input id="u94z" disabled></i-input>
-        per month for
-        <i-input class="disabled"><input id="u96z" disabled></i-input>
-        years
+      <ul id="locations" class="locations">
+        <li data-cookie="location" data-value="custom">
+          <img class="avatar" src="img/custom.png" alt="yellow front door of a brick house">
+          <div class="label">Custom</div>
+        </li>
+        <li data-cookie="location" data-value="atlanta">
+          <img class="avatar" src="img/atlanta.png" alt="atlanta skyline">
+          <div class="label">Atlanta</div>
+        </li>
+        <li data-cookie="location" data-value="chicago">
+          <img class="avatar" src="img/chicago.png"  alt="chicago skyline and willis tower">
+          <div class="label">Chicago</div>
+        </li>
+        <li data-cookie="location" data-value="san_francisco">
+          <img class="avatar" src="img/san-francisco.png" alt="san francisco golden gate bridge">
+          <div class="label">San Francisco</div>
+        </li>
+        <li data-cookie="location" data-value="seattle">
+          <img class="avatar" src="img/seattle.png" alt="seattle skyline and space needle">
+          <div class="label">Seattle</div>
+        </li>
+      </ul>
+      <section class="insight">
+        With <span class="input">$<input id="e4z" data-cookie="upfront"></span> paid at closing,
+        a <span class="input">$<input id="e1z" data-cookie="price"></span> home costs
+        about <span class="input disabled">$<input id="u94z" disabled></span> per month
+        for <span class="input disabled"><input id="u96z" disabled></span> years
         <div class="details">
           <span id="btn-details" class="button noselect">Details</span>
         </div>
-      </div>
-      <column class="visualization">
-        <div id="sparkline" class="sparkline"></div>
-        <row id="sparkline_dates" class="sparkline_dates"></row>
-      </column>
-      <column class="checkboxes">
-        <cell><input type="checkbox" id="cb-balance" checked> Loan balance</cell>
-        <cell><input type="checkbox" id="cb-payments_t" checked> Total payments</cell>
-      </column>
-      <div class="legal">
+      </section>
+      <footer class="legal">
         <a target="_blank" href="https://www.binaryaffection.com/">&copy; 2017 Binary Affection</a> &middot;
         <a target="_blank" href="https://www.binaryaffection.com/projects/realisticmortgage/privacypolicy/">Privacy policy</a> &middot;
         <a target="_blank" href="https://www.binaryaffection.com/projects/realisticmortgage/tou/">Terms of use</a>
-      </div>
-    </div>
+      </footer>
+    </main>
   </body>
 </html>
